// Learning configurations.

syntax = "proto2";

package fewshot.configs;

message OptimizerConfig {
  // Optimizer name.
  optional string optimizer = 1;

  // Learning rate decay values.
  repeated float lr_list = 2;

  // Learning rate decay steps.
  repeated int32 lr_decay_steps = 3;

  // Total number of training steps.
  optional int32 max_train_steps = 4;

  // Training batch size.
  optional int32 batch_size = 5;

  // Training number of GPUs.
  optional int32 num_gpu = 6 [default = 1];

  optional float clip_norm = 7 [default = 0.0];

  // T-BPTT
  optional int32 inner_loop_truncate_steps = 8;

  // Scale learning rate by the number of GPUs.
  optional bool lr_scaling = 9 [default = true];
}
